--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-animations": "^1.0.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qrcode-logo": "^2.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
