--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-animations": "^1.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-qrcode-logo": "^2.10.0"
   },
